--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
+    background-color: #fff;
     font-family: 'Lato', sans-serif;
-    background-color: #3f51b5;
 }
 
 div.main {
@@ -12,13 +12,10 @@ div.main {
 
 div.conv-card {
     height: 200px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
     display: grid;
     grid-template-rows: 80px auto;
     padding: 20px;
-    border-radius: 2px;
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
-    background-color: #fff;
-    color: #3f51b5;
 }
 
 div.conv-header {
@@ -29,13 +26,13 @@ div.conv-header {
 div.from-curr {
     font-size: medium;
     font-weight: lighter;
-    /* color: #878787; */
+    color: #878787;
 }
 
 div.to-curr {
     font-size: xx-large;
     font-weight: lighter;
-    /* color: #212121; */
+    color: #212121;
 }
 
 div.converter {
@@ -45,7 +42,7 @@ div.converter {
 
 div.curr-form {
     display: grid;
-    grid-template-columns: 150px 150px;
+    grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 15px;
 }
 
@@ -54,32 +51,23 @@ input.value-input {
     border: 0.5px solid silver;
     text-indent: 10px;
     font-size: 13px;
-    padding: 0px 10px;
+    padding: 0px;
     margin: 0;
     text-align: right;
-    appearance: textfield;
-    -ms-progress-appearance: textfield
-}
-
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
 }
 
 input.value-input:focus {
     outline: none;
 }
-
 select::-ms-expand {
     display: none;
 }
 
 .curr-select {
-    background: url('up-down.png') 102% / 15% no-repeat whitesmoke;
+    background: url('up-down.png') 90% / 15% no-repeat whitesmoke;
 }
 
-select {
+select{
     border-radius: 0px;
     border: 1px solid #ccc;
     -webkit-appearance: none;
@@ -87,6 +75,4 @@ select {
     appearance: none;
     height: 30px;
     padding: 5px;
-    overflow: hidden;
-    width: 150px;
 }
